--- a/PressHmi/View/Para/ParaSubAutoAirSourcePage.xaml
+++ b/PressHmi/View/Para/ParaSubAutoAirSourcePage.xaml
@@ -65,27 +65,31 @@
                                Text="开始位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_1}" Tag="&#xf044;" Command="{Binding StartPos_1SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_1}" Tag="&#xf044;" Command="{Binding StartPos_1SetCmd}" 
+                                IsEnabled="{Binding _ManagerRole}" />
                     <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="开始方向:" />
                     <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                 Background="{Binding ParaAutoAirSourceInfo.StartArr_1,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StartArr_1,Converter={StaticResource _aasatc}}" Tag="&#xf078;" Command="{Binding StartArr_1SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StartArr_1,Converter={StaticResource _aasatc}}" Tag="&#xf078;" Command="{Binding StartArr_1SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_1}" Tag="&#xf044;" Command="{Binding EndPos_1SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_1}" Tag="&#xf044;" Command="{Binding EndPos_1SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束方向:" />
                     <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.EndArr_1,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.EndArr_1,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_1SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.EndArr_1,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_1SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                 </Grid>
             </Border>
         </Grid>
@@ -119,27 +123,31 @@
                                Text="开始位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_2}" Tag="&#xf044;" Command="{Binding StartPos_2SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_2}" Tag="&#xf044;" Command="{Binding StartPos_2SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="开始方向:" />
                     <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.StartArr_2,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StartArr_2,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_2SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StartArr_2,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_2SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_2}" Tag="&#xf044;" Command="{Binding EndPos_2SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_2}" Tag="&#xf044;" Command="{Binding EndPos_2SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束方向:" />
                     <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.EndArr_2,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.EndArr_2,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_2SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.EndArr_2,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_2SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                 </Grid>
             </Border>
         </Grid>
@@ -173,27 +181,31 @@
                                Text="开始位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_3}" Tag="&#xf044;" Command="{Binding StartPos_3SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_3}" Tag="&#xf044;" Command="{Binding StartPos_3SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="开始方向:" />
                     <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.StartArr_3,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StartArr_3,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_3SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StartArr_3,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_3SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_3}" Tag="&#xf044;" Command="{Binding EndPos_3SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_3}" Tag="&#xf044;" Command="{Binding EndPos_3SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束方向:" />
                     <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.EndArr_3,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.EndArr_3,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_3SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.EndArr_3,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_3SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                 </Grid>
             </Border>
         </Grid>
@@ -227,27 +239,31 @@
                                Text="开始位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_4}" Tag="&#xf044;" Command="{Binding StartPos_4SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrStartPos_4}" Tag="&#xf044;" Command="{Binding StartPos_4SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="开始方向:" />
                     <Button Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.StartArr_4,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StartArr_4,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_4SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StartArr_4,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding StartArr_4SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束位置(mm):" />
                     <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_4}" Tag="&#xf044;" Command="{Binding EndPos_4SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.StrEndPos_4}" Tag="&#xf044;" Command="{Binding EndPos_4SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
                                Text="结束方向:" />
                     <Button Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                             Background="{Binding ParaAutoAirSourceInfo.EndArr_4,Converter={StaticResource _iocc}}" Foreground="White"
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource IONormalButton}"
-                               Content="{Binding ParaAutoAirSourceInfo.EndArr_4,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_4SetCmd}"/>
+                               Content="{Binding ParaAutoAirSourceInfo.EndArr_4,Converter={StaticResource _aasatc}}" Tag="&#xf078;"  Command="{Binding EndArr_4SetCmd}"
+                            IsEnabled="{Binding _ManagerRole}"/>
                 </Grid>
             </Border>
         </Grid>
