--- a/PressHmi/View/Para/ParaSubDieClampPage.xaml
+++ b/PressHmi/View/Para/ParaSubDieClampPage.xaml
@@ -81,7 +81,7 @@
                                Text="放松允许位置:" />
                     <Button Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="10,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}" Width="300" Height="60" Style="{StaticResource ParaInputNormalButton}"
-                               Content="{Binding ParaDieClampInfo.ClampRelaxPosition}"  Tag="&#xf044;"
+                               Content="{Binding ParaDieClampInfo.ClampRelaxPosition}"  Tag="&#xf044;" IsEnabled="{Binding _ManagerRole}"
                                 Command="{Binding ClampRelaxPositionSetCmd}"/>
                     <TextBlock Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center"  Margin="0,0,10,0" 
                                FontSize="{DynamicResource TextPrimerSize}"
