--- a/PressHmi/View/Styles/ParaStyle.xaml
+++ b/PressHmi/View/Styles/ParaStyle.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:conv="clr-namespace:PressHmi.View.Converters">
 
+
+    <conv:BoolVisibleConverter x:Key="_bvc"/>
 
     <Style x:Key="MyParaButtonBase" BasedOn="{x:Null}" TargetType="{x:Type ButtonBase}">
         <Setter Property="Focusable" Value="False"></Setter>
@@ -91,7 +94,7 @@
                             <TextBlock Grid.Column="1" x:Name="text3" Margin="0,0,5,0"
                                         HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
 										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
-										Foreground="Gray" Style="{DynamicResource FontAwesome}"/>
+										Foreground="Gray" Style="{DynamicResource FontAwesome}" Visibility="{Binding IsEnabled, Converter={StaticResource _bvc}, RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -142,7 +145,7 @@
                             <TextBlock Grid.Column="1" x:Name="text3" Margin="5,0,5,0" Panel.ZIndex="20"
                                         HorizontalAlignment="Right" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
 										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
-										Foreground="LightGray" Style="{DynamicResource FontAwesome}"/>
+										Foreground="LightGray" Style="{DynamicResource FontAwesome}" Visibility="{Binding IsEnabled, Converter={StaticResource _bvc}, RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -194,7 +197,7 @@
                             <TextBlock Grid.Column="0" x:Name="text3" Margin="5,0,5,0" Panel.ZIndex="20"
                                         HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{Binding FontSize, RelativeSource={RelativeSource Mode=TemplatedParent}}"
 										Text="{Binding Tag, RelativeSource={RelativeSource Mode=TemplatedParent}}" 
-										Foreground="Gray" Style="{DynamicResource FontAwesome}"/>
+										Foreground="Gray" Style="{DynamicResource FontAwesome}" Visibility="{Binding IsEnabled, Converter={StaticResource _bvc}, RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
